--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,8 +32,8 @@ body{
 .bg-secondary{
     background-color:var(--secondary-color);
 }
-.bg-gradient{
-    background:var(--primary-gradient);
+.bg-gradient-p{
+    background:linear-gradient(45deg, #E55220, #A9340C,#852200);
 }
 .container{
     margin: auto !important;
@@ -73,4 +73,17 @@ body{
     background-color: #fff;
     color: var(--primary-color);
     border: 2px solid var(--primary-color);
+}
+/* Navbar CSS */
+.nav-menu:hover .login-submenu{
+    opacity: 100% !important;
+    visibility: visible !important;
+    transition: 0.2s all ease-in;
+    transform: translateY(56px); 
+}
+.login-submenu{
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.2s all ease-in;
+    transform: translateY(-50px);
 }
