--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 :root{
     --primary-color:#F3722A !important;
     --secondary-color:#181818 ;
+    --original-bg:#EAEAEA;
     --primary-gradient:  linear-gradient(45deg, #E55220, #A9340C,#852200);
     --default-font:"Inter", serif;
     --secondary-font:"Poppins", serif;
@@ -20,7 +21,14 @@ body{
     font-family: var(--default-font) !important;
     font-size: var(--font-size) !important;
     height: 100%;
-    
+    position: relative !important;
+   
+}
+p{
+    margin-bottom: 0px ;
+}
+.secondary-font{
+    font-family: var(--secondary-font);
 }
 .title-f{
     font-family: "Orbitron", sans-serif;
@@ -35,10 +43,29 @@ body{
 .bg-gradient-p{
     background:linear-gradient(45deg, #E55220, #A9340C,#852200);
 }
+.grey-bg{
+    background-color: #EFECEC ;
+}
 .container{
     margin: auto !important;
 }
 /* Banner CSS */
+.banner{
+    min-height: 85vh;
+    width: 100%;
+}
+.banner::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #1818188e;
+}
+.banner img{
+    max-height: 85vh;
+    object-fit: cover;
+    width: 100%;
+}
 .banner-slick .slick-next{
     right: 35px;
     z-index: 1;
@@ -47,24 +74,33 @@ body{
     left: 35px;
     z-index: 1;
 }
+.banner-content h1{
+    font-family: "Orbitron", sans-serif;
+    text-shadow: 0 0 10px black;
+}
+.banner-content p{
+    font-family: var(--secondary-font);
+    text-shadow: 0 0 10px black;
+}
 /* banner form css */
 
 .form-input-fm input:focus{
     outline: none;
 }
 .form-input-fm input{
-    padding: 5px;
+    padding-top: 5px;
     background-color: transparent;
 }
 .form-input-fm{
-    border: 1px solid rgba(93, 93, 93, 0.626);
     display: block;
     border-radius: 6px;
 }
 .form-input-fm select{
-    background-color: var(--primary-color);
-    padding: 5px;
-    border-radius: 5px;
+    padding: 2px;
+    background-color: transparent;
+}
+select{
+    background-color: transparent;
 }
 .form-input-fm select:focus{
     outline: none;
@@ -74,12 +110,31 @@ body{
     color: var(--primary-color);
     border: 2px solid var(--primary-color);
 }
+@media only screen and (max-width: 1023px) {
+     .col {
+        flex: 0 0 auto !important;
+        width: 100% !important;
+        margin-bottom: 25px;
+    }
+}
 /* Navbar CSS */
+.loginAuth{
+    position: relative;
+}
+.nav-menu:hover .loginAuth::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    background-color: var(--primary-color);
+    bottom: 0;
+    transition: 0.2s all ease-in;
+}
 .nav-menu:hover .login-submenu{
     opacity: 100% !important;
     visibility: visible !important;
     transition: 0.2s all ease-in;
-    transform: translateY(56px); 
+    transform: translateY(58px); 
 }
 .login-submenu{
     opacity: 0;
@@ -89,7 +144,7 @@ body{
 }.marquee {
     overflow: hidden;
     background-color: var(--primary-color);
-    height: 50px; /* Adjust height as needed */
+    height: 50px; 
     display: flex;
     align-items: center;
     position: relative;
@@ -97,7 +152,7 @@ body{
   
   .team-scroll {
     display: flex;
-    gap: 20px; /* Adjust spacing between items */
+    gap: 20px; 
     will-change: transform;
   }
   
@@ -108,3 +163,29 @@ body{
     white-space: nowrap;
   }
   
+
+  /* Youtube Video Section */
+
+  .videoCoverImage .thumb {
+    cursor: pointer;
+    max-width: 100%;
+    display: block;
+  }
+
+  /* properties Css */
+
+  .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+    border: 1px solid var(--primary-color) !important;
+    background-color: var(--primary-color) !important;
+    color: #fff !important;
+  }
+  .nav-tabs .nav-link{
+    padding: 8px 32px;
+    border-radius: 12px !important;
+    color: var(--primary-color) !important;
+    border: 1px solid var(--primary-color) !important;
+  }
+  .nav-tabs .nav-link:hover{
+    background-color: var(--primary-color)!important;
+    color: #fff !important;
+  }
