live auction page : added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,3 +231,123 @@ select{
     background-color: #fff !important;
     color: var(--primary-color) !important;
   }
+
+  /* Live Auction Lot CSS */
+  .live-auction-times .auction-items .auction-time.active{
+    border: 1px solid var(--primary-color);
+    border-radius: 100px;
+    color: var(--primary-color);
+    background: linear-gradient(180deg, #FFE8DD,#FFEDE4);
+
+  }
+  .live-auction-times .auction-items .auction-time{
+    border: 1px solid #E4E8ED;
+    border-radius: 100px;
+    min-width: max-content;
+    color: #808080;
+    cursor:pointer;
+    /* -webkit-user-select: none; 
+    -ms-user-select: none;
+    user-select: none; */
+  }
+  .live-auction-times .auction-items::-webkit-scrollbar{
+    display: none;
+  }
+
+  .lot-img img{
+    min-height:290px;
+    height: 100%;
+    object-fit: cover;
+    
+  }
+  .lot-img::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%; 
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(360deg, #000,transparent);
+    z-index: 20;
+    border-radius: 0.75rem;
+  }
+  .lot-price-box{
+    position: relative;
+    min-height: 330px;
+    height: 100%;
+    max-height: min-content;
+    width: 100%;
+    /* box-shadow: 4px 4px 0px var(--primary-color); */
+    /* background-color: var(--primary-color); */
+  }
+  .clip-box{
+    min-height: 80%;
+    width: 100%;
+    position: absolute;
+    background-color: #fff;
+    bottom: 0;
+    border-radius: 12px;
+    border-top-left-radius: 0;
+    border: 2px solid var(--primary-color);
+    border-top: 0;
+    max-height: 80%;
+  }
+  .clip-path{
+    min-height: 20%;
+    width: 30%;
+    position: absolute;
+    background-color: #fff;
+    top: 0;
+    border-radius: 12px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    border: 2px solid var(--primary-color);
+    border-bottom: 0;
+  }
+  .lot-price-box::before{
+    content: '';
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    background-color: transparent;
+    top: 13%;
+    left: 30%;
+    border-radius: 100px;
+    box-shadow: -10px 9px 0 #fff;
+    z-index: 10;
+  }
+.clip-bg{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--primary-color);
+    border-radius: 10px;
+    left: 8px;
+    top: 8px;
+
+}
+.clip-input{
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(243, 114, 41, 0.2) ;
+}
+.clip-input input{
+    width: 80%;
+}
+.clip-input a{
+    width: 20%;
+}
+
+.counter-fn{
+    position: relative;
+}
+.counter-fn::after{
+    content: ':';
+    position: absolute;
+    right: -10px;
+    top: 0;
+}
+.clip-counter p{
+    font-size: 9px;
+    line-height: 9px;
+}
