--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,7 +407,7 @@ select{
     display: block;
     width: 20px; 
     height: 20px; 
-    background-image: url('/assets/img/icon/prev.svg');
+    background-image: url('./assets/img/icon/prev.svg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -417,7 +417,7 @@ select{
     display: block;
     width: 20px; 
     height: 20px; 
-    background-image: url('/assets/img/icon/next.svg');
+    background-image: url('./assets/img/icon/next.svg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -583,7 +583,7 @@ select{
     font-family: var(--secondary-font) !important;
 }
 .d-box-1{
-    background-image: url('/assets/img/p-1.png');
+    background-image: url('./assets/img/p-1.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -591,7 +591,7 @@ select{
     overflow: hidden;
 }
 .d-box-2{
-    background-image: url('/assets/img/p-2.png');
+    background-image: url('./assets/img/p-2.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
