/live-auction-lots: added : Tab content-sort options

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,6 +242,25 @@ select{
   }
 
   /* Live Auction Lot CSS */
+  .sort-item{
+    background: #fff;
+    padding: 10px 20px;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    gap: 9px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px #a8a8a8;
+    right: 0;
+    width: 100%;
+    min-width: max-content;
+    opacity: 0;
+    visibility: hidden;
+  }
+  .sort-option:hover .sort-item{
+    opacity: 100%;
+    visibility: visible;
+  }
   .live-auction-times .auction-items .auction-time.active{
     border: 1px solid var(--primary-color);
     border-radius: 100px;
@@ -289,8 +308,8 @@ select{
     /* box-shadow: 4px 4px 0px var(--primary-color); */
     /* background-color: var(--primary-color); */
   }
-  .clip-box{
-    min-height: 80%;
+  .clip-box {
+    min-height: 78%;
     width: 100%;
     position: absolute;
     background-color: #fff;
@@ -300,9 +319,9 @@ select{
     border: 2px solid var(--primary-color);
     border-top: 0;
     max-height: 80%;
-  }
-  .clip-path{
-    min-height: 20%;
+}
+  .clip-path {
+    min-height: 22%;
     width: 30%;
     position: absolute;
     background-color: #fff;
@@ -312,17 +331,17 @@ select{
     border-bottom-right-radius: 0;
     border: 2px solid var(--primary-color);
     border-bottom: 0;
-  }
+}
   .lot-price-box::before{
     content: '';
     position: absolute;
-    height: 20px;
-    width: 20px;
+    height: 23px;
+    width: 23px;
     background-color: transparent;
-    top: 13%;
+    top: 15%;
     left: 30%;
     border-radius: 100px;
-    box-shadow: -10px 9px 0 #fff;
+    box-shadow: -8px 8px 0 #fff;
     z-index: 10;
   }
 .clip-bg{
@@ -357,8 +376,9 @@ select{
     top: 0;
 }
 .clip-counter p{
-    font-size: 9px;
+    font-size: 8px;
     line-height: 9px;
+    letter-spacing: 1px;
 }
 
 /* property Detail page css */
