--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -493,7 +493,101 @@ select{
 .p-view p a{
     color: var(--primary-color);
 }
+.floor-plan-img .e-image{
+    display: flex !important;
+}
+.floor-plan-img .e-image img{
+    width: 396px;
+    height: 300px;
+    object-fit: cover;
+}
+.floor-plan-img .slick-dots li{
+    margin: 0px !important;
+}
+.floor-plan-img .slick-dots li button:before{
+    font-size: 26px;
+}
 
+
+.w3-modal {
+    z-index: 100;
+    display: none;
+    padding-top: 100px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(10px);
+}
+.w3-xlarge {
+    font-size: 24px !important;
+}
+
+.w3-display-topright {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.w3-btn, .w3-button {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.w3-btn, .w3-button {
+    border: none;
+    display: inline-block;
+    padding: 8px 16px;
+    vertical-align: middle;
+    overflow: hidden;
+    text-decoration: none;
+    color: #fff;
+    background-color: var(--primary-color);
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+}
+.w3-red, .w3-hover-red:hover {
+    color: #fff !important;
+    background-color: #f44336 !important;
+}
+
+.w3-button:hover {
+    color: #000 !important;
+    background-color: #f44336 !important;
+}
+.w3-animate-zoom {
+    animation: animatezoom 0.6s;
+}
+
+@keyframes animatezoom{
+    0% {
+        transform: scale(0);
+    }
+    
+    100% {
+        transform: scale(1);
+    }
+}
+@media (min-width: 993px) {
+    .w3-modal-content {
+        width: 900px;
+    }
+}
+.w3-modal-content {
+    margin: auto;
+    background-color: #fff;
+    position: relative;
+    padding: 0;
+    outline: 0;
+    width: 600px;
+}
 .spec-list ul li{
     font-size: 14px;
     font-weight: 400;
@@ -554,6 +648,30 @@ select{
     left: 8px;
     top: 8px;
 
+}
+.bid-dropdown-btn{
+    cursor: pointer;
+    transition: all 0.3s linear;
+}
+.bid-dropdown-btn.active{
+    transition: all 0.3s linear;
+    transform: rotate(180deg);
+}
+.bid-dropdown{
+    max-height: 168px;
+    overflow-y: scroll;
+}
+.bid-dropdown.hidden{
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.3s linear;
+    transform: translateY(50px);
+}
+.bid-dropdown.show{
+    visibility: visible;
+    opacity: 100%;
+    transition: all 0.3s linear;
+    transform: translateY(0px);
 }
 .property-input{
     display: flex;
